--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -3,7 +3,7 @@ title: "Infra-O käyttöohje"
 author: "Gispo Ltd."
 date: "`r Sys.Date()`"
 site: "bookdown::bookdown_site"
-abstract: "Käyttöohje infraomaisuuden tiedon hallinnan järjestelmään."
+abstract: "Käyttöohje. Infraomaisuuden tiedon hallinta avoimilla paikkatietoteknologioilla (QGIS + PostgreSQL/PostGIS). "
 output:
     bookdown::html_book:
         toc: true
@@ -13,43 +13,3 @@ output:
         split_by: rmd
 documentclass: book
 ---
-
-<!-- Harjoitukset -->
-
-# Infra-O käyttöohje
-
-## Lukuohje
-
-**Web-selaimessa** suoritettavat komennot on merkitty seuraavasti:
-
-::: note-box
-<http://localhost:8080/geoserver>
-:::
-
-**Komentorivillä** suoritettavat komennot on merkitty seuraavasti:
-
-::: commandline-box
-sudo lsb_release -a
-:::
-
-**Tiedostojen sisältö** on esitetty seuraavasti:
-
-::: file-content-box
-#IPv4 local connections: #host all all 127.0.0.1/32 md5
-:::
-
-**HTML- ja CSS-koodit, SQL-komennot sekä Python-scriptit** on esitetty seuraavasti:
-
-::: code-box
-SELECT version();
-:::
-
-**Kysymykset, lisätiedot ja vihjeet** on esitetty seuraavasti:
-
-::: hint-box
-Mistä löydät tietoa GeoServeristä?
-
-GeoServerillä on omat kotisivut.
-
-Psst! Tietoa GeoServeristä löydät internetistä.
-:::
