--- a/src/12_osio_12.Rmd
+++ b/src/12_osio_12.Rmd
@@ -1,27 +1,17 @@
-# Lisätiedot, resurssit ja lisäarvopalveluita tarjoavat yritykset
+# Terminologia
 
-QGIS-toimintaympäristö ja siihen liittyvät työkalut ovat tuotettu osana Valtiovarainministeriön tukemaa hanketta, jonka hankeisäntänä ja projektipäälikkönä toimi Espoon kaupunki. 
+**PostgreSQL**: PostgreSQL on avoimen lähdekoodin relaatiotietokanta, joka on suunniteltu tehokkaaseen ja tietoturvalliseen tietokantahallintaan.
 
-QGIS-toimintaympäristö tukee kansallista Infra-o-tietomallia, joka on esitelty tietomallikuvauksineen ja lisätietoineen sivulla: 
+**PostGIS**: PostGIS on spatiaalinen tietokannan laajennus PostgreSQL-tietokannalle, joka mahdollistaa spatiaalisten tietojen tallentamisen ja käsittelyn relaatiotietokannassa.
 
-<https://www.infra-o.fi/>
+**Tietokantayhteys**: Tietokantayhteys on viestintäreitti tietokannan ja ohjelmiston välillä, joka mahdollistaa ohjelmiston pääsyn tietokantaan ja tietojen manipuloinnin.
 
-## Lisäarvopalveluita tarjoavat yritykset
+**Isäntänimi** (eng. host name): Isäntänimi on yksilöllinen tunniste, joka annetaan tietokoneelle tai laitteelle, joka on kytketty verkkoon, ja sitä käytetään tietokoneen tai laitteen saavuttamiseksi verkon yli.
 
-+-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
-| Yrityksen nimi                      | Kuvaus                                                                                                                                                                                                                                                                                                                                                                         | Yhteystiedot                               |
-+=====================================+================================================================================================================================================================================================================================================================================================================================================================================+============================================+
-| [Gispo Oy](https://www.gispo.fi/):  | Gispo edistää avoimen lähdekoodin paikkatieto-ohjelmistojen sekä avointen paikkatietoaineistojen käyttöä ja kehitystä. Gispo tukee myös suomalaisia kuntia ja kaupunkeja konsultoinnin, koulutuksien ja tukipalvelun avuin avoimen lähdekoodin paikkatietoteknologioiden ja kuntasektorin ratkaisujen toteutuksessa sekä ylläpidossa.                                          | [myynti\@gispo.fi](mailto:myynti@gispo.fi) |
-|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
-|                                     | \                                                                                                                                                                                                                                                                                                                                                                              |                                            |
-|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
-|                                     | Gispo auttaa kuntia ja kaupunkeja infraomaisuuden hallinnassa asiakaslähtöisesti: 1) avaimet käteen periaatteella (Gispo tarjoaa tietokannan, käyttäjähallinnan ja ratkaisun käyttövalmiina), 2) on-premises ratkaisun vaatimalla tavalla (Gispo auttaa ratkaisun käyttöönotossa ja tukee alkuvaiheessa), 3) koulutus- ja tukipalveluna (Gispo kouluttaa ja tukee käytössä).   |                                            |
-|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
-|                                     | \                                                                                                                                                                                                                                                                                                                                                                              |                                            |
-+-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
-| ...                                 | ...                                                                                                                                                                                                                                                                                                                                                                            | ...                                        |
-+-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
-| \                                   | \                                                                                                                                                                                                                                                                                                                                                                              | \                                          |
-+-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
+**Tietokannan nimi**: Tietokannan nimi on nimi, joka annetaan tietylle tietokannalle tietokannanhallintajärjestelmässä tai muunlaisessa tietokantaa hyödyntävässä client-ohjelmistossa, kuten QGISissa.
 
-Huom. lisäarvopalveluita tarjoava yritys voi lisätä itsensä PR:n avulla listaan. Kiitos! 
+**Käyttäjänimi ja salasana**: Käyttäjänimi ja salasana ovat tunnistetiedot, joita käytetään käyttäjän todentamiseen ja pääsyn myöntämiseen tietokantaan.
+
+**Porttinumero**: Porttinumero on tietty numero, joka on annettu verkkoyhteydelle, jotta voidaan tunnistaa lähetettävä tai vastaanotettava liikennetyyppi yhteyden kautta.
+
+**QGIS-projekti**: QGIS-projekti on tiedosto, joka sisältää kaikki tiedot ja asetukset, jotka liittyvät tiettyyn QGIS-projektiin. Projektit voivat sisältää useita paikkatietotasoja eri tietolähteistä sekä esim. niihin liittyviä kuvausteknisiä konfiguraatioita.
