--- a/src/13_osio_13.Rmd
+++ b/src/13_osio_13.Rmd
@@ -1,3 +1,27 @@
-# Yhteystiedot
+# Lisätiedot, resurssit ja lisäarvopalveluita tarjoavat yritykset
 
-Kyseessä on avoimen lähdekoodin projekti, jonka kehittäminen perustuu yhteistyöhön eikä yksittäistä yhteyshenkilöä ole. Jos käyttäjä tunnistaa ongelmia tai työkalun käytöstä tulee kysymyksiä, käyttäjä voi olla yhteydessä lisäarvopalveluita tarjoaviin yrityksiin (kts. edellinen kappale).
+QGIS-toimintaympäristö ja siihen liittyvät työkalut ovat tuotettu osana Valtiovarainministeriön tukemaa hanketta, jonka hankeisäntänä ja projektipäälikkönä toimi Espoon kaupunki. 
+
+QGIS-toimintaympäristö tukee kansallista Infra-o-tietomallia, joka on esitelty tietomallikuvauksineen ja lisätietoineen sivulla: 
+
+<https://www.infra-o.fi/>
+
+## Lisäarvopalveluita tarjoavat yritykset
+
++-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
+| Yrityksen nimi                      | Kuvaus                                                                                                                                                                                                                                                                                                                                                                         | Yhteystiedot                               |
++=====================================+================================================================================================================================================================================================================================================================================================================================================================================+============================================+
+| [Gispo Oy](https://www.gispo.fi/):  | Gispo edistää avoimen lähdekoodin paikkatieto-ohjelmistojen sekä avointen paikkatietoaineistojen käyttöä ja kehitystä. Gispo tukee myös suomalaisia kuntia ja kaupunkeja konsultoinnin, koulutuksien ja tukipalvelun avuin avoimen lähdekoodin paikkatietoteknologioiden ja kuntasektorin ratkaisujen toteutuksessa sekä ylläpidossa.                                          | [myynti\@gispo.fi](mailto:myynti@gispo.fi) |
+|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
+|                                     | \                                                                                                                                                                                                                                                                                                                                                                              |                                            |
+|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
+|                                     | Gispo auttaa kuntia ja kaupunkeja infraomaisuuden hallinnassa asiakaslähtöisesti: 1) avaimet käteen periaatteella (Gispo tarjoaa tietokannan, käyttäjähallinnan ja ratkaisun käyttövalmiina), 2) on-premises ratkaisun vaatimalla tavalla (Gispo auttaa ratkaisun käyttöönotossa ja tukee alkuvaiheessa), 3) koulutus- ja tukipalveluna (Gispo kouluttaa ja tukee käytössä).   |                                            |
+|                                     |                                                                                                                                                                                                                                                                                                                                                                                |                                            |
+|                                     | \                                                                                                                                                                                                                                                                                                                                                                              |                                            |
++-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
+| ...                                 | ...                                                                                                                                                                                                                                                                                                                                                                            | ...                                        |
++-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
+| \                                   | \                                                                                                                                                                                                                                                                                                                                                                              | \                                          |
++-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
+
+Huom. lisäarvopalveluita tarjoava yritys voi lisätä itsensä PR:n avulla listaan. Kiitos! 
