--- a/src/01_osio_1.Rmd
+++ b/src/01_osio_1.Rmd
@@ -1,6 +1,6 @@
 # Johdanto
 
-InfraO-open on QGIS-toimintaympristö, joka on suunniteltu avuksi suomalaisten kuntien ja kaupunkien infraomaisuuden tietojen luomiseen ja hallintaan. Ratkaisun avulla kunnat pystyvät hallitsemaan paikkatietoa kunnallisesta infraomaisuudesta, kuten mm. penkkeistä, katuvaloista ja leikkipaikkoista sekä myös katuvaloista, viheralueista ja katualueista.
+InfraO-open on QGIS-toimintaympristö, joka on suunniteltu avuksi suomalaisten kuntien ja kaupunkien infraomaisuuden tietojen luomiseen ja hallintaan. Ratkaisun avulla kunnat pystyvät hallitsemaan paikkatietoa kunnallisesta infraomaisuudesta, kuten mm. penkeistä, katuvaloista ja leikkipaikkoista sekä myös katuvaloista, viheralueista ja katualueista.
 
 ## Ratkaisun yleiskatsaus
 
