Add rest of the section numbering

--- a/src/12_osio_12.Rmd
+++ b/src/12_osio_12.Rmd
@@ -1,4 +1,4 @@
-# Terminologia
+# 12. Terminologia
 
 **PostgreSQL**: PostgreSQL on avoimen lähdekoodin relaatiotietokanta, joka on suunniteltu tehokkaaseen ja tietoturvalliseen tietokantahallintaan.
 
