--- a/src/13_osio_13.Rmd
+++ b/src/13_osio_13.Rmd
@@ -6,7 +6,7 @@ QGIS-toimintaympäristö tukee kansallista Infra-o-tietomallia, joka on esitelty
 
 <https://www.infra-o.fi/>
 
-## Lisäarvopalveluita tarjoavat yritykset
+## 13.1. Lisäarvopalveluita tarjoavat yritykset
 
 +-------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+
 | Yrityksen nimi                      | Kuvaus                                                                                                                                                                                                                                                                                                                                                                         | Yhteystiedot                               |
