--- a/src/08_osio_8.Rmd
+++ b/src/08_osio_8.Rmd
@@ -1,4 +1,4 @@
-# 8. Datan tuonti (importointi) ja vienti (exportointi)
+# 8. Datan tuominen (importointi) ja vienti (exportointi)
 
 Infra-O lisäosa tarjoaa mahdollisuuden datan importointiin ja exportointiin.
 
